src/lib/howitt/src/models/point/snapshots/howitt__models__point__delta__tests__elevation_gain_loss_delta.snap
---
source: src/lib/howitt/src/models/point/delta.rs
expression: "(points, gains, losses)"
---
(
    [
        ElevationPoint {
            point: POINT(145.0 -37.0),
            elevation: 100.0,
        },
        ElevationPoint {
            point: POINT(145.1 -37.1),
            elevation: 200.0,
        },
        ElevationPoint {
            point: POINT(145.2 -37.2),
            elevation: 150.0,
        },
        ElevationPoint {
            point: POINT(145.3 -37.3),
            elevation: 300.0,
        },
    ],
    [
        ElevationGainDelta(
            0.0,
        ),
        ElevationGainDelta(
            100.0,
        ),
        ElevationGainDelta(
            100.0,
        ),
        ElevationGainDelta(
            250.0,
        ),
    ],
    [
        ElevationLossDelta(
            0.0,
        ),
        ElevationLossDelta(
            0.0,
        ),
        ElevationLossDelta(
            50.0,
        ),
        ElevationLossDelta(
            50.0,
        ),
    ],
)
