src/lib/howitt/src/models/point/snapshots/howitt__models__point__delta__tests__moving_delta.snap
---
source: howitt/src/models/point/delta.rs
expression: moving_deltas
---
[
    MovingDelta(
        TimeDelta {
            secs: 0,
            nanos: 0,
        },
    ),
    MovingDelta(
        TimeDelta {
            secs: 0,
            nanos: 0,
        },
    ),
    MovingDelta(
        TimeDelta {
            secs: 1800,
            nanos: 0,
        },
    ),
    MovingDelta(
        TimeDelta {
            secs: 1800,
            nanos: 0,
        },
    ),
]
