src/lib/howitt/src/models/point/snapshots/howitt__models__point__delta__tests__moving_delta_with_speed.snap
---
source: howitt/src/models/point/delta.rs
expression: deltas
---
(
    SpeedDelta(
        6.393912442905197,
    ),
    MovingDelta(
        TimeDelta {
            secs: 900,
            nanos: 0,
        },
    ),
)
