src/lib/howitt/src/models/point/snapshots/howitt__models__point__delta__tests__single_point_delta.snap
---
source: src/lib/howitt/src/models/point/delta.rs
expression: "((p1, p2), distance, elevation, bearing)"
---
(
    (
        ElevationPoint {
            point: POINT(145.0 -37.0),
            elevation: 100.0,
        },
        ElevationPoint {
            point: POINT(145.1 -37.1),
            elevation: 200.0,
        },
    ),
    DistanceDelta(
        14226.797224188322,
    ),
    ElevationDelta(
        100.0,
    ),
    BearingDelta(
        141.4363966910321,
    ),
)
