src/lib/howitt/src/models/point/snapshots/howitt__models__point__delta__tests__speed_delta_with_accumulating.snap
---
source: howitt/src/models/point/delta.rs
expression: deltas
---
(
    DistanceDelta(
        799.2390562546843,
    ),
    ElapsedDelta(
        TimeDelta {
            secs: 900,
            nanos: 0,
        },
    ),
    SpeedDelta(
        3.196956225018737,
    ),
)
