src/lib/howitt/src/models/point/snapshots/howitt__models__point__delta__tests__temporal_deltas.snap
---
source: src/lib/howitt/src/models/point/delta.rs
expression: "(points, deltas)"
---
(
    [
        TemporalElevationPoint {
            datetime: 1970-01-01T00:16:40Z,
            point: POINT(145.0 -37.0),
            elevation: 100.0,
        },
        TemporalElevationPoint {
            datetime: 1970-01-01T00:33:20Z,
            point: POINT(145.1 -37.1),
            elevation: 200.0,
        },
        TemporalElevationPoint {
            datetime: 1970-01-01T00:58:20Z,
            point: POINT(145.2 -37.2),
            elevation: 150.0,
        },
    ],
    [
        (
            ElapsedDelta(
                TimeDelta {
                    secs: 0,
                    nanos: 0,
                },
            ),
            DistanceDelta(
                0.0,
            ),
            ElevationGainDelta(
                0.0,
            ),
        ),
        (
            ElapsedDelta(
                TimeDelta {
                    secs: 1000,
                    nanos: 0,
                },
            ),
            DistanceDelta(
                14226.797224188322,
            ),
            ElevationGainDelta(
                100.0,
            ),
        ),
        (
            ElapsedDelta(
                TimeDelta {
                    secs: 2500,
                    nanos: 0,
                },
            ),
            DistanceDelta(
                28446.294894661758,
            ),
            ElevationGainDelta(
                100.0,
            ),
        ),
    ],
)
